[gd_scene load_steps=4 format=3 uid="uid://d4g5clc1akpao"]

[ext_resource type="Script" path="res://player.gd" id="1_2f61j"]
[ext_resource type="Texture2D" uid="uid://cefeqya5bmims" path="res://icon.svg" id="1_5m8g4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ag4c4"]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_2f61j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.3, 1.3)
shape = SubResource("RectangleShape2D_ag4c4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_5m8g4")

[node name="Cayote_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Dash_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Can_dash_timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="timeout" from="Cayote_timer" to="." method="_on_cayote_timer_timeout"]
[connection signal="timeout" from="Dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Can_dash_timer" to="." method="_on_can_dash_timer_timeout"]
